<resources>
    <string name="app_name">偶们</string>
    <string name="image_description">Image</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="update">修改</string>
    <string name="refresh">刷新</string>
    <string name="send">发送</string>
    <string name="next">下一步</string>
    <string name="time">时间</string>
    <string name="delete">删除</string>
    <string name="clear">清除</string>
    <string name="filter">筛选</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="abandon">放弃</string>
    <string name="default_dialog_title">偶们提示</string>
    <string name="location_empty">没有位置信息</string>
    <string name="address">地址</string>
    <string name="mobile">手机号码</string>
    <string name="submit">提交</string>
    <string name="choose">选择</string>
    <string name="finish">完成</string>
    <string name="preview">预览</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="loading">正在加载</string>
    <string name="pick_image">选择图片</string>
    <string name="pick_audio">选择音乐</string>
    <string name="filename">文件名</string>
    <string name="completed_time">完成时间</string>
    <string name="friend">好友</string>
    <string name="delete_confirm">确定要删除吗？</string>
    <string name="receiving">收取中&#8230;</string>
    <string name="friend_list">通讯录</string>
    <string name="add_huodong">发起</string>
    <string name="setting">设置</string>
    <string name="footer_tip">加载更多</string>
    <string name="publish">发布</string>
    <string name="publishing">正在上传</string>
    <string name="pause">暂停</string>
    <string name="invite_friend">邀请好友</string>
    <string name="oumen_team">偶们团队</string>
    <string name="user_activity">我的活动</string>
    <string name="near">附近</string>
    <string name="search">搜索</string>
    <string name="oumen_team_welcome_msg">亲，欢迎来到偶们！【亲子活动】在这里有超过10万+的户外亲子活动、室内亲子活动、线上活动等您参与，参与活动后还能加入群聊，方便您认识更多的帅爸辣妈。【宝宝MV】2190天，每天记录宝贝的成长，等宝贝长大后，给他一个完整的成长回忆。【偶们圈】随时随地交流亲子问题，让孩子更加健康的成长，让偶们在亲子路上同行。</string>
    <string name="multi_create_info_by_self">活动创建成功，所有报名的人都会出现在这个群聊组中了</string>
    <string name="multi_create_info_by_other">亲，您已成功报名参加【%s】活动，在这里你可以和所有参加活动的爸爸妈妈聊天了；活动相关问题请咨询活动群主。</string>
    <string name="multi_create_phone">亲，为了您能准时参加%s活动，我们开通了免费短信提醒功能；点击添加你的手机号码</string>
    <string name="multi_create_phone_tag">点击添加你的手机号码</string>
    <string name="multi_create_phone_success">亲，您已开通免费短信提醒功能，为了您能准时参加活动，请保持手机畅通。</string>
    <string name="input_phone_success">免费活动提醒功能订制成功，我们将给您发送一条短信，请注意查看，预祝您和您的孩子参加活动顺利。【偶们团队】</string>
    <string name="find_password_msg">已经向您的账户的电子邮箱发送了一封邮件，如果您仍然有问题，请访问oumen.com告知我们</string>
    <string name="find_password_start_msg">输入您的电子邮件地址，我们将给您发送有关更改密码的进一步说明</string>
    <string name="book">育儿宝典</string>
    <string name="book_title1">您的宝宝今天</string>
    <string name="book_title2">宝宝距出生还有</string>
    <string name="book_tip">亲，下面信息是偶们育儿宝典根据宝宝目前年龄推送的育儿信息</string>
    <string name="book_title_year">年</string>
    <string name="book_title_month">个月</string>
    <string name="book_title_day">天</string>
    <string name="module_title_near">偶们附近</string>
    <string name="module_title_msg">聊天</string>
    <string name="module_title_quan">偶们圈</string>
    <string name="module_title_huodong">活动筛选</string>
    <string name="module_title_mv">宝宝MV</string>
    <string name="module_title_dadayishere">爸爸在这儿</string>
    <string name="err_timeout">连接超时</string>
    <string name="err_network_invalid">亲，网络不给力喔～请检查下网络吧～</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="enjoy">赞</string>
    <string name="privacy_public">对任何人都公开</string>
    <string name="pressed_record">按住 说话</string>
    <string name="tab_activities">亲子活动</string>
    <string name="tab_messages">消息中心</string>
    <string name="logout_confirm">确认要注销吗？</string>
    <string name="login_err_kicked">您的账号在别处登录，您被迫下线，请检查账号是否安全！</string>
    <string name="login_err">登录失败</string>
    <string name="activity_filter_beiyun">备孕</string>
    <string name="activity_filter_huaiyun">怀孕</string>
    <string name="activity_filter_range1">0&#8211;1岁</string>
    <string name="activity_filter_range2">1&#8211;3岁</string>
    <string name="activity_filter_range3">3&#8211;6岁</string>
    <string name="activity_filter_range4">6岁以上</string>
    <string name="activity_filter_order_default">默认排序</string>
    <string name="activity_filter_order_newest">最新活动</string>
    <string name="activity_filter_order_hot">人气由高到底</string>
    <string name="activity_filter_huwai">户外活动</string>
    <string name="activity_filter_shinei">室内活动</string>
    <string name="activity_filter_lvyou">亲子旅游</string>
    <string name="activity_filter_xianshang">线上活动</string>
    <string name="activity_filter_ok">确定并筛选</string>
    <string name="activity_near_list_tip">你的附近出现了n个亲子活动，点击查看</string>
    <string name="activity_list_empty">对不起，没有符合您要求的活动，偶们在努力开拓中，先看看别的活动吧！</string>
    <string name="activity_user_empty">对不起，没有找到您参加活动的记录</string>
    <string name="activity_near_empty">对不起，附近没有搜索到活动</string>
    <string name="circle_confrim_delete_content">确定删除吗？</string>
    <string name="circle_confrim_delete_comment">是否删除评论？</string>
    <string name="circle_obtain_list_failed">获取偶们圈失败</string>
    <string name="circle_delete_comment_failed">删除评论失败</string>
    <string name="circle_delete_content_failed">删除偶们圈失败</string>
    <string name="circle_send_comment_failed">发表评论失败</string>
    <string name="circle_send_content_failed">发布偶们圈失败</string>
    <string name="circle_enjoy_failed">赞失败</string>
    <string name="circle_unenjoy_failed">取消赞失败</string>
    <string name="msg_recommend_title_default">活动推荐</string>
    <string name="msg_recommend_description_default">暂无活动</string>
    <string name="select_biaoqing">选择表情</string>
    <string name="mv_list_empty_add_tip">时间就这么偷偷的流逝了\n快给宝宝补一段童年的回忆吧</string>
    <string name="mv_upload">上传视频</string>
    <string name="mv_pause_upload">暂停上传</string>
    <string name="mv_share">分享视频</string>
    <string name="mv_open_all">查看全部</string>
    <string name="mv_add_video">添加视频</string>
    <string name="mv_open_by_list">用列表查看</string>
    <string name="mv_prefix_manager_title">MV片头</string>
    <string name="mv_prefix_manager_tab_all">全部</string>
    <string name="mv_prefix_manager_downloaded">已下载</string>
    <string name="mv_make">制作</string>
    <string name="mv_make_today">点击制作今天的MV</string>
    <string name="mv_use">使  用</string>
    <string name="mv_tab_unpublished">未发布</string>
    <string name="mv_tab_published">已发布</string>
    <string name="mv_main_create_description">亲！你还没有宝宝成长的MV，赶紧制作一份吧！</string>
    <string name="mv_compose">视频合成</string>
    <string name="mv_edit">剪辑视频</string>
    <string name="mv_edit_clip">选择片段</string>
    <string name="mv_preview_prefix_video">片头预览</string>
    <string name="mv_compose_dialog_images">从相册选择照片</string>
    <string name="mv_compose_dialog_record">拍摄视频</string>
    <string name="mv_compose_dialog_local">选择本地视频</string>
    <string name="mv_compose_images_count">请选择6～20张图片</string>
    <string name="mv_select_begin_video">选择片头</string>
    <string name="mv_select_local_video">选择视频</string>
    <string name="mv_compose_start_without_audio">我们正在努力地往前冲\n选一首喜欢的歌来表达你的心情吧</string>
    <string name="mv_compose_completed">视频合成好啦～</string>
    <string name="mv_compose_failed">视频合成失败了T_T</string>
    <string name="mv_compose_input_title_hint">请输入视频名称（必填）</string>
    <string name="mv_compose_select_audio">请选择你喜欢的音乐</string>
    <string name="mv_compose_select_begin_video">请选择你喜欢的片头</string>
    <string name="mv_compose_record_video">拍摄视频</string>
    <string name="mv_compose_record_video_finish">拍摄视频完成</string>
    <string name="mv_compose_edit_video">剪辑视频</string>
    <string name="mv_compose_edit_video_finish">剪辑视频完成</string>
    <string name="mv_compose_back_dialog_msg">确认放弃？放弃将无法保存已制作的视频</string>
    <string name="mv_record_err_back">正在拍摄视频，请选择返回或完成</string>
    <string name="mv_compose_err_refuse_action">MV正在合成中，请稍后</string>
    <string name="mv_compose_err_no_record">请先录制一段视频</string>
    <string name="mv_compose_err_no_edit">请剪辑一段视频</string>
    <string name="mv_compose_err_edit_time">时间设置不正确</string>
    <string name="mv_compose_err_time_too_long">视频最长30秒</string>
    <string name="mv_compose_err_no_audio">请选择你喜欢的音乐</string>
    <string name="mv_compose_err_no_video">请选择你喜欢的片头</string>
    <string name="mv_compose_err_no_title">给你的MV起个名字吧</string>
    <string name="mv_compose_err_title_symbol">MV标题不能有特殊符号</string>
    <string name="mv_compose_err_exist">已有同名MV，请您换个标题吧</string>
    <string name="mv_compose_err_compose">对不起，无法完整视频合成</string>
    <string name="prefix_manager_delete">确定要删除所有片头吗？</string>
    <string name="prefix_manager_err_delete_on_downloading">正在下载片头，不能删除</string>
    <string name="err_socket">无法连接IM服务器，请稍后再试</string>
    <string name="nickname">昵称</string>
    <string name="username">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="chat">聊天</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="confrim_password">确认密码</string>
    <string name="find_password">找回密码</string>
    <string name="modify_password">重置密码</string>
    <string name="confirm_send">确认发送</string>
    <string name="usersex">性别</string>
    <string name="usersex_man">男</string>
    <string name="usersex_feman">女</string>
    <string name="message_center">消息中心</string>
    <string name="message_center_delete">清空</string>
    <string name="nav_login_title">用户登录</string>
    <string name="nav_login_btn">登录</string>
    <string name="nav_login_tip">或用以下方式登录</string>
    <string name="nav_logout_tip">注 销</string>
    <string name="nav_register_title">用户注册</string>
    <string name="register">注册</string>
    <string name="nav_notifyinfo_title">设置个人资料</string>
    <string name="notifyinfo_person">个人信息</string>
    <string name="notifyinfo_person_tiptitle">添加个人资料图片</string>
    <string name="notifyinfo_person_tipphoto">点击更换头像</string>
    <string name="nav_noticeitem_title">使用条款</string>
    <string name="nav_invite">邀请好友</string>
    <string name="nav_near_title">偶们附近</string>
    <string name="register_phone">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="baby_birthday">出生日期</string>
    <string name="baby_birthday_time">出生时间</string>
    <string name="baby_description">宝宝签名</string>
    <string name="baby_paregent">预产期</string>
    <string name="nav_babysetting_title">出生设置</string>
    <string name="nav_babysetting_choose">请选择你处于哪个阶段</string>
    <string name="nav_usercenter_title">用户中心</string>
    <string name="nav_usercenter_btn">编辑</string>
    <string name="nav_citypicker_btn">城市选择</string>
    <string name="nav_save">保存</string>
    <string name="nav_babysign_title">宝宝签名</string>
    <string name="nav_pwdnotify_title">密码修改</string>
    <string name="nav_activitydetail_title">偶们活动</string>
    <string name="nav_activitydescrible_title">活动详情</string>
    <string name="activity_apply_success">进入活动群聊</string>
    <string name="activity_apply_sender_success">进入活动群聊</string>
    <string name="nav_activitymap_title">活动位置</string>
    <string name="nav_activitybuilding_title1">企业信息</string>
    <string name="nav_activitybuilding_title2">身份证照</string>
    <string name="nav_activitybuilding_title3">营业执照</string>
    <string name="list_pull">下拉刷新</string>
    <string name="list_release">松开后加载</string>
    <string name="center_head_photo">头像</string>
    <string name="center_nickname">名称</string>
    <string name="oumen_number">偶们号</string>
    <string name="center_baby_state">出生状态</string>
    <string name="center_baby_sex">宝宝性别</string>
    <string name="center_baby_sign">宝宝签名</string>
</resources>