<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/activity_filter_bg"
    android:orientation="vertical"
    android:padding="@dimen/padding_default" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_beiyun"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_big_size"
            android:layout_weight="1"
            android:padding="@dimen/padding_large"
            android:drawableTop="@drawable/icon_beiyun_light"
            android:background="@color/activity_filter_big_btn_normal"
            android:gravity="center"
            android:text="@string/activity_filter_beiyun"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/btn_huaiyun"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_big_size"
            android:layout_marginLeft="@dimen/padding_micro"
            android:layout_marginRight="@dimen/padding_micro"
            android:layout_weight="1"
            android:padding="@dimen/padding_large"
            android:drawableTop="@drawable/icon_huaiyun_light"
            android:background="@color/activity_filter_big_btn_normal"
            android:gravity="center"
            android:text="@string/activity_filter_huaiyun"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/btn_range1"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_big_size"
            android:layout_weight="1"
            android:padding="@dimen/padding_large"
            android:drawableTop="@drawable/icon_age_range1_light"
            android:background="@color/activity_filter_big_btn_normal"
            android:gravity="center"
            android:text="@string/activity_filter_range1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_micro"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_range2"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_big_size"
            android:layout_weight="1"
            android:padding="@dimen/padding_large"
            android:drawableTop="@drawable/icon_age_range2_light"
            android:background="@color/activity_filter_big_btn_normal"
            android:gravity="center"
            android:text="@string/activity_filter_range2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/btn_range3"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_big_size"
            android:layout_marginLeft="@dimen/padding_micro"
            android:layout_marginRight="@dimen/padding_micro"
            android:layout_weight="1"
            android:padding="@dimen/padding_large"
            android:drawableTop="@drawable/icon_age_range3_light"
            android:background="@color/activity_filter_big_btn_normal"
            android:gravity="center"
            android:text="@string/activity_filter_range3"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/btn_range4"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_big_size"
            android:layout_weight="1"
            android:padding="@dimen/padding_large"
            android:drawableTop="@drawable/icon_age_range4_light"
            android:background="@color/activity_filter_big_btn_normal"
            android:gravity="center"
            android:text="@string/activity_filter_range4"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_default" >

        <TextView
            android:id="@+id/huwai"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_small_size"
            android:background="@color/activity_filter_btn_dark"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/activity_filter_huwai"
            android:textColor="@color/activity_filter_text_pressed2"
            android:textSize="@dimen/text_pretty" />

        <TextView
            android:id="@+id/shinei"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_small_size"
            android:layout_marginLeft="@dimen/padding_micro"
            android:layout_marginRight="@dimen/padding_micro"
            android:background="@color/activity_filter_btn_dark"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/activity_filter_shinei"
            android:textColor="@color/activity_filter_text_pressed2"
            android:textSize="@dimen/text_pretty" />

        <!--
        <TextView
            android:id="@+id/lvyou"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_small_size"
            android:layout_marginRight="@dimen/padding_micro"
            android:background="@color/activity_filter_btn_dark"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/activity_filter_lvyou"
            android:textColor="@color/activity_filter_text_pressed2"
            android:textSize="@dimen/text_pretty" />
        -->

        <TextView
            android:id="@+id/xianshang"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_filter_small_size"
            android:background="@color/activity_filter_btn_dark"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/activity_filter_xianshang"
            android:textColor="@color/activity_filter_text_pressed2"
            android:textSize="@dimen/text_pretty" />
    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_filter_small_size"
        android:layout_marginTop="@dimen/padding_default"
        android:background="@drawable/btn_bg1"
        android:text="@string/activity_filter_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large" />

</LinearLayout>