<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/mv_compose_type_dialog_bg" >

    <TextView
        android:id="@+id/record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_super"
        android:paddingBottom="@dimen/padding_super"
        android:textSize="@dimen/text_large"
        android:textColor="@color/white"
        android:text="@string/mv_compose_dialog_record"
        android:gravity="center" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black" />
    
     <TextView
        android:id="@+id/local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_super"
        android:paddingBottom="@dimen/padding_super"
        android:textSize="@dimen/text_large"
        android:textColor="@color/white"
        android:text="@string/mv_compose_dialog_local"
        android:gravity="center" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black" />

    <TextView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_super"
        android:paddingBottom="@dimen/padding_super"
        android:textSize="@dimen/text_large"
        android:textColor="@color/white"
        android:text="@string/mv_compose_dialog_images"
        android:gravity="center" />

</LinearLayout>